fixed route bugs

--- a/views/blog.pug
+++ b/views/blog.pug
@@ -60,9 +60,9 @@ nav#navbar2.navbar.navbar-expand-lg.navbar-light.navbar-two-custom.navbar-invers
   #navbarNav.collapse.navbar-collapse
     ul.navbar-nav.ms-auto
       li.nav-item.active
-        a.nav-link.nav-link2(title='link' href='index.pug') Home
+        a.nav-link.nav-link2(title='link' href='/') Home
       li.nav-item
-        a.nav-link(title='link' href='/about') About
+        a.nav-link(title='link' href='/') About
       // Dropdown
       li.nav-item.dropdown
         a#navbarDropdownMenuLink.nav-link.dropdown-toggle(title='link' href='/' role='button' data-bs-toggle='dropdown' aria-expanded='false')
@@ -71,7 +71,7 @@ nav#navbar2.navbar.navbar-expand-lg.navbar-light.navbar-two-custom.navbar-invers
           li
             a.dropdown-item(title='link' href='/groups') Groups
           li
-            a.dropdown-item(title='link' href='/do') Do
+            a.dropdown-item(title='link' href='/') Do
           li
             a.dropdown-item(title='link' href='/discuss') Discuss
           li
@@ -79,7 +79,7 @@ nav#navbar2.navbar.navbar-expand-lg.navbar-light.navbar-two-custom.navbar-invers
           li
             a.dropdown-item(title='link' href='/blog') Blog
           li
-            a.dropdown-item(title='link' href='/Talk') Talk
+            a.dropdown-item(title='link' href='/') Talk
           li
             a.dropdown-item(title='link' href='/campaigns') Campaigns
           li
