--- a/views/discuss.pug
+++ b/views/discuss.pug
@@ -71,7 +71,7 @@ nav#navbar2.navbar.navbar-expand-lg.navbar-light.navbar-two-custom.navbar-invers
           li
             a.dropdown-item(href='/groups') Groups
           li
-            a.dropdown-item(href='/do') Do
+            a.dropdown-item(href='/') Do
           li
             a.dropdown-item(href='/discuss') Discuss
           li
@@ -79,7 +79,7 @@ nav#navbar2.navbar.navbar-expand-lg.navbar-light.navbar-two-custom.navbar-invers
           li
             a.dropdown-item(href='/blog') Blog
           li
-            a.dropdown-item(href='/Talk') Talk
+            a.dropdown-item(href='/') Talk
           li
             a.dropdown-item(href='/campaigns') Campaigns
           li
