--- a/views/groups.pug
+++ b/views/groups.pug
@@ -59,9 +59,9 @@ nav#navbar2.navbar.navbar-expand-lg.navbar-light.navbar-two-custom.navbar-invers
   #navbarNav.collapse.navbar-collapse
     ul.navbar-nav.ms-auto
       li.nav-item.active
-        a.nav-link.nav-link2(href='/home') Home
+        a.nav-link.nav-link2(href='/') Home
       li.nav-item
-        a.nav-link(href='/about') About
+        a.nav-link(href='/') About
       // Dropdown
       li.nav-item.dropdown
         a#navbarDropdownMenuLink.nav-link.dropdown-toggle(href='/' role='button' data-bs-toggle='dropdown' aria-expanded='false')
@@ -70,7 +70,7 @@ nav#navbar2.navbar.navbar-expand-lg.navbar-light.navbar-two-custom.navbar-invers
           li
             a.dropdown-item(href='/groups') Groups
           li
-            a.dropdown-item(href='/do') Do
+            a.dropdown-item(href='/') Do
           li
             a.dropdown-item(href='/discuss') Discuss
           li
@@ -78,7 +78,7 @@ nav#navbar2.navbar.navbar-expand-lg.navbar-light.navbar-two-custom.navbar-invers
           li
             a.dropdown-item(href='/blog') Blog
           li
-            a.dropdown-item(href='/talk') Talk
+            a.dropdown-item(href='/') Talk
           li
             a.dropdown-item(href='/campaigns') Campaigns
           li
