--- a/views/index.pug
+++ b/views/index.pug
@@ -69,7 +69,7 @@ nav#navbar2.navbar.navbar-expand-lg.navbar-light.navbar-two-custom.navbar-invers
   #navbarNav.collapse.navbar-collapse
     ul.navbar-nav.ms-auto
       li.nav-item.active
-        a.nav-link.nav-link2(href='index') Home
+        a.nav-link.nav-link2(href='/') Home
       li.nav-item
         a.nav-link(href='/') About
       // Dropdown
@@ -80,7 +80,7 @@ nav#navbar2.navbar.navbar-expand-lg.navbar-light.navbar-two-custom.navbar-invers
           li
             a.dropdown-item(href='/groups') Groups
           li
-            a.dropdown-item(href='/do') Do
+            a.dropdown-item(href='/') Do
           li
             a.dropdown-item(href='/discuss') Discuss
           li
@@ -88,7 +88,7 @@ nav#navbar2.navbar.navbar-expand-lg.navbar-light.navbar-two-custom.navbar-invers
           li
             a.dropdown-item(href='/blog') Blog
           li
-            a.dropdown-item(href='/talk') Talk
+            a.dropdown-item(href='/') Talk
           li
             a.dropdown-item(href='/campaigns') Campaigns
           li
@@ -201,7 +201,7 @@ footer.bg-primary.text-white.pt-5.pb-4
         p
           a.text-white(href='/groups' style='text-decoration: none;')  Groups
         p
-          a.text-white(href='/do' style='text-decoration: none;')  Do
+          a.text-white(href='/' style='text-decoration: none;')  Do
         p
           a.text-white(href='/discuss' style='text-decoration: none;')  Discuss
         p
@@ -209,7 +209,7 @@ footer.bg-primary.text-white.pt-5.pb-4
         p
           a.text-white(href='/blog' style='text-decoration: none;')  Blog
         p
-          a.text-white(href='/talk' style='text-decoration: none;')  Talk
+          a.text-white(href='/' style='text-decoration: none;')  Talk
         p
           a.text-white(href='/campaigns' style='text-decoration: none;')  Campaigns
         p
