--- a/views/login.pug
+++ b/views/login.pug
@@ -18,7 +18,7 @@ head
 // Navbar
 nav#navbar2.navbar.navbar-expand-lg.navbar-custom.navbar-inverse.navbar-static-top
   .container
-    a.navbar-brand(href='#')
+    a.navbar-brand(href='/')
       img#mygov_logo(alt='mygov logo' src='images/mygov_logo.png')
       img#azadi_logo(alt='Azadi ka amrit mahotsav' src='images/azadi_img.png')
 // Login form starts
