--- a/views/myGovRegister.pug
+++ b/views/myGovRegister.pug
@@ -14,7 +14,7 @@ section.login1
     h3 Create a MyGov Account
     p.text-secondary
       | Already have an Account? 
-      a(href='') Login
+      a(href='/login') Login
 section
   .container
     div
